<resources>
    <string name="app_name">UlimiNet</string>
    <string name="welcome_message">Language Preference</string>
    <string name="proceed_btn">Proceed</string>
    <string name="account_btn">Already Have an Account</string>
    <string name="login_btn">Login</string>
    <string name="username_label">Username</string>
    <string name="password_label">Password</string>
    <string name="password_confirmation_label">Confirm Password</string>
    <string name="icon_description">Ulimi Net</string>
    <string name="singin_label">Sign into your account</string>
    <string name="signup_label">Sign Up</string>
    <string name="signup_message">Sign up for an account</string>
    <string name="firstname_label">Firstname</string>
    <string name="surname_label">Surname</string>
    <string name="Open">Close</string>
    <string name="Close">Open</string>
    <string name="location_label">District / Location</string>

    <string name="settings_fragment_header">Settings</string>
    <string name="settings_notification_switch">Push Notifications</string>
    <string name="preferences_label">Preferences</string>
    <string name="about_header">About</string>
    <string name="app_version">Version 1.0</string>
    <string name="offline_content_switch">Show Offline Content</string>
    <string name="update_password_header">Update Password</string>
    <string name="update_btn_label">Update</string>
    <string name="email_hint">Email (Optional)</string>
    <string name="phone_hint">Phone</string>
</resources>
