<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/setting_header_layout"
        android:layout_width="match_parent"
        android:layout_height="34dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/setting_tab_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_fragment_header"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
            android:drawableStart="@drawable/ic_settings"
            android:drawableLeft="@drawable/ic_settings"/>

    </LinearLayout>

    <android.support.v7.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setting_header_layout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/update_password_header"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Title" />

            <EditText
                android:id="@+id/update_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:ems="10"
                android:hint="@string/password_label"
                android:autofillHints="@string/password_label"
                android:inputType="textPassword"
                app:layout_constraintBottom_toBottomOf="parent"
                tools:layout_editor_absoluteX="0dp" />

            <EditText
                android:id="@+id/update_password_confirmation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:ems="10"
                android:hint="@string/password_confirmation_label"
                android:autofillHints="@string/password_confirmation_label"
                android:inputType="textPassword"
                app:layout_constraintBottom_toBottomOf="parent"
                tools:layout_editor_absoluteX="0dp" />

            <Button
                android:id="@+id/button2"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/update_btn_label" />
        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:padding="@dimen/setting_card_padding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/preferences_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:text="@string/preferences_label"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Title" />

            <Switch
                android:id="@+id/switch2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_notification_switch" />

            <Switch
                android:id="@+id/switch3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/offline_content_switch" />

            <TextView
                android:id="@+id/about_header_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="3dp"
                android:text="@string/about_header"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Title" />

            <TextView
                android:id="@+id/app_name_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            <TextView
                android:id="@+id/app_version_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_version"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
        </LinearLayout>

    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>